@@ -32,7 +32,7 @@ $variables['body_class']             = 'bigbang';
 $variables['steps']                  = $bigbang_info['steps'];
 $variables['current_step']           = $bigbang_info['current_step'];
 $variables['next_step']              = $bigbang_info['next_step'];
-$variables['sector_max']             = (int) filter_input (INPUT_POST, 'sektors', FILTER_SANITIZE_NUMBER_INT); // Sanitize the input and typecast it to an int
+$variables['sector_max']             = (int) filter_input (INPUT_POST, 'sector_max', FILTER_SANITIZE_NUMBER_INT); // Sanitize the input and typecast it to an int
 $variables['spp']                    = filter_input (INPUT_POST, 'spp', FILTER_SANITIZE_NUMBER_INT);
 $variables['oep']                    = filter_input (INPUT_POST, 'oep', FILTER_SANITIZE_NUMBER_INT);
 $variables['ogp']                    = filter_input (INPUT_POST, 'ogp', FILTER_SANITIZE_NUMBER_INT);
